--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
         outline: 0;
         font-weight: inherit;
         font-style: inherit;
-        font-size: 100%;
         font-family: inherit;
       }
 
@@ -99,7 +98,7 @@
         font-family: serif;
         color: #000;
         line-height: 22px;
-        font-size: 32px;
+        font-size: 1.2rem;
         position: relative;
         margin: 0;
         padding: 0;
@@ -168,7 +167,6 @@
       button {
         margin-top: 20px;
         padding: 10px 20px;
-        font-size: 16px;
         cursor: pointer;
       }
     </style>
