--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@200..900&display=swap"
+      rel="stylesheet"
+    />
     <title>诗经</title>
     <style>
       :root {
@@ -73,7 +79,6 @@
         outline: 0;
         font-weight: inherit;
         font-style: inherit;
-        font-family: inherit;
       }
 
       p,
@@ -95,7 +100,8 @@
       body {
         width: 100%;
         height: 100%;
-        font-family: serif;
+        font-family: "Noto Serif SC", serif;
+        font-optical-sizing: auto;
         color: #000;
         line-height: 22px;
         font-size: 1.2rem;
