strip resource files

--- a/index.html
+++ b/index.html
@@ -10,189 +10,7 @@
       rel="stylesheet"
     />
     <title>诗经</title>
-    <style>
-      :root {
-        --red-color: #960202;
-        --gray-color: #999999;
-      }
-      html,
-      body,
-      div,
-      span,
-      applet,
-      object,
-      iframe,
-      h1,
-      h2,
-      h3,
-      h4,
-      h5,
-      h6,
-      p,
-      blockquote,
-      pre,
-      a,
-      abbr,
-      acronym,
-      address,
-      big,
-      cite,
-      code,
-      del,
-      dfn,
-      em,
-      font,
-      img,
-      ins,
-      kbd,
-      q,
-      s,
-      samp,
-      small,
-      strike,
-      strong,
-      sub,
-      sup,
-      tt,
-      var,
-      dl,
-      dt,
-      dd,
-      ol,
-      ul,
-      li,
-      fieldset,
-      form,
-      label,
-      legend,
-      table,
-      caption,
-      tbody,
-      tfoot,
-      thead,
-      tr,
-      th,
-      td {
-        margin: 0;
-        padding: 0;
-        border: 0;
-        outline: 0;
-        font-weight: inherit;
-        font-style: inherit;
-      }
-
-      p,
-      h2,
-      h3 {
-        line-height: 1.7em;
-        word-break: break-all;
-      }
-
-      h1,
-      h2,
-      h3 {
-        font-weight: bold;
-      }
-      h2 {
-        color: var(--red-color);
-      }
-
-      body {
-        width: 100%;
-        height: 100%;
-        font-family: "Noto Serif SC", serif;
-        font-optical-sizing: auto;
-        color: #000;
-        line-height: 22px;
-        font-size: 1.2rem;
-        position: relative;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        overflow: hidden;
-      }
-      .container {
-        width: 80%;
-        padding: 10px;
-        margin: 20px auto;
-        overflow-y: scroll;
-        transition: all 0.5s ease;
-      }
-
-      .container h2 {
-        margin-top: 40px;
-      }
-
-      .container .special-symbol {
-        color: var(--gray-color);
-      }
-
-      .container::before {
-        content: "";
-        position: absolute;
-        top: 80%;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background: linear-gradient(to top, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
-        z-index: 9; /* 将遮罩置于内容下方 */
-        pointer-events: none; /* 使遮罩不可点击 */
-      }
-
-      .vertical {
-        writing-mode: vertical-rl;
-        text-orientation: upright;
-        height: 80%;
-        padding: 20px 0 20px 150px;
-        overflow-y: unset;
-        overflow-x: scroll;
-      }
-      .vertical.container::before {
-        top: 0;
-        right: 80%;
-        background: linear-gradient(to right, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
-      }
-      .vertical.container h1 {
-        margin-top: 0;
-        margin-right: 30px;
-      }
-      .vertical.container h2 {
-        margin-top: 0;
-        margin-right: 40px;
-      }
-
-      .vertical.container .special-symbol {
-        color: var(--red-color);
-        font-weight: bold;
-      }
-
-      .container::-webkit-scrollbar {
-        width: 5px;
-        height: 5px;
-      }
-
-      .container::-webkit-scrollbar-track {
-        background-color: rgba(0, 0, 0, 0.2);
-        box-shadow: inset 0px 0px 0px 2px #fff;
-        border-radius: 5px;
-      }
-
-      .container::-webkit-scrollbar-thumb {
-        background-color: rgba(0, 0, 0);
-        border-radius: 5px;
-      }
-
-      .container::-webkit-scrollbar-corner {
-      }
-
-      button {
-        margin-top: 20px;
-        padding: 10px 20px;
-        cursor: pointer;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <button class="toggle-reading-mode" onclick="toggleReadingMode()">
@@ -14318,21 +14136,6 @@
         >寝成孔安<span class="special-symbol">。</span>
       </p>
     </div>
-    <script>
-      function setMaxHeight() {
-        const container = document.getElementById("content");
-        container.style.maxHeight = `${window.innerHeight - 150}px`; // Subtract some space for padding/margin
-      }
-
-      // Set max height on initial load
-      window.onload = setMaxHeight;
-
-      // Adjust max height on window resize
-      window.onresize = setMaxHeight;
-      function toggleReadingMode() {
-        const content = document.getElementById("content");
-        content.classList.toggle("vertical");
-      }
-    </script>
+    <script src="base.js"></script>
   </body>
 </html>
